tests/paczka1/small_fuzzy/31312318.err
Error in line 2: b8v A515 59,3
Error in line 9: bmy A777 79,5
Error in line 12: b8v A777 28,2
